Added menu information

--- a/menu.html
+++ b/menu.html
@@ -43,30 +43,24 @@
         <div>
             <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Super Pepperoni
-                    </button>
+                <a href="menu.html" class="pepperoni.html">
+                    Super Pepperoni
                 </a>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/HAMANDTWOCHEESE.webp" alt="Ham and Cheese">
             <div>
-                <a href="menu.html">    
-                    <button class="card">
-                        Dices of Ham
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Dices of Ham
                 </a>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/4-cheese-garlic-pizza.jpg" alt="Cheesy Garlic">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Cheesy Garlic
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Cheesy Garlic
                 </a>
             </div>
         </div>
@@ -77,8 +71,7 @@
         <div>
             <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Neapolitan">
             <div>
-                <a href="menu.html">
-                    <button class="card">
+                <a href="menu.html" class="menu-button">
                         Neapolitan Margherita
                     </button>
                 </a>
@@ -87,8 +80,7 @@
         <div>
             <img src="./Pizza Images/Veggie-Pizza-2-of-5-e1691215701129 copy.png" alt="Veggie">
             <div>
-                <a href="menu.html">
-                    <button class="card">
+                <a href="menu.html" class="menu-button">
                         Veggie Goodness
                     </button>
                 </a>
@@ -97,8 +89,7 @@
         <div>
             <img src="./Pizza Images/images (10).jpeg" alt="Seafood">
             <div>
-                <a href="menu.html">
-                    <button class="card">
+                <a href="menu.html" class="menu-button">
                         Ocean of Seafood
                     </button>
                 </a>
@@ -111,10 +102,8 @@
         <div>
             <img src="./Pizza Images/Supreme-Pizza-Simply-LaKita-5.jpg" alt="Supreme">
             <div>
-                <a href="menu.html">
-                    <button class="card">
+                <a href="menu.html" class="menu-button">
                         The Supreme
-                    </button>
                 </a>
             </div>
         </div>
@@ -130,30 +119,24 @@
         <div>
             <img src="./Pizza Images/images (11).jpeg" alt="Spaghetti">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Spaghetti
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Spaghetti
                 </a>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/images (12).jpeg" alt="Macaroni">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Macaroni
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Macaroni
                 </a>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/images (13).jpeg" alt="Fusilli">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Fusilli
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Fusilli
                 </a>
             </div>
         </div>
@@ -170,30 +153,24 @@
         <div>
             <img src="./Pizza Images/pine1_1024x1024@2x.webp" alt="Pineapple">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Pineapple Dices
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Pineapple Dices
                 </a>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/IMG_0509-scaled.jpg" alt="Buffalo Wings">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Buffalo Wings
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Buffalo Wings
                 </a>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/Crispy-Fries_8.webp" alt="French Fries">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        French Fries
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    French Fries
                 </a>
             </div>
         </div>
@@ -204,30 +181,24 @@
         <div>
             <img src="./Pizza Images/images (14).jpeg" alt="Onion Rings">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Onion Rings
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Onion Rings
                 </a>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/Homemade-Mozzarella-Sticks-9.jpeg" alt="Mozzarella Sticks">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Mozzarella Sticks
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Mozzarella Sticks
                 </a>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/Big-Italian-Salad-1200x1553.webp" alt="Salad">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Salad
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Salad
                 </a>
             </div>
         </div>
@@ -238,20 +209,16 @@
         <div>
             <img src="./Pizza Images/easy-homemade-garlic-bread-fbig3.webp" alt="Garlic Bread">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Garlic Bread
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Garlic Bread
                 </a>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/bruschetta.jpg" alt="Bruschetta">
             <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Bruschetta
-                    </button>
+                <a href="menu.html" class="menu-button">
+                    Bruschetta
                 </a>
             </div>
         </div>
