New details pages on each pizza and minor edits

--- a/cheesygarlic.html
+++ b/cheesygarlic.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <span class="outlined-text">
-        <title>Super Pepperoni</title>
+        <title>Cheesy Garlic</title>
     </span>
 </head>
 <body class="default-background">
@@ -31,9 +31,9 @@
                 Exit
             </a>
         </div>
-        <h1 class="menu-details">Super Pepperoni</h1>
+        <h1 class="menu-details">Cheesy Garlic</h1>
         <div>
-            <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
+            <img src="./Pizza Images/4-cheese-garlic-pizza.jpg" alt="Cheese">
         </div>
     </section>
     <section>
@@ -41,7 +41,7 @@
             <h3>Description</h3>
         </div>
         <div>
-            <p>Nothing beats a delicious pepperoni pizza! The Super Pepperoni Pizza has everything from the classic goodness of a pepperoni pizza. This includes a nice traditional Italian pizza base, rich, authentic, and fresh tomato sauce, abundantly huge amount of very large and tasty seasoned pepperoni slices, and last but not least, the thick and stretchy mozzarella! It's all a fan of a basic pepperoni pizza could ask for!</p>
+            <p>Do you want to forget about pizzas that are overloaded with so many unnecessary ingredients or just simply want to enjoy mozzarella on a pizza! We have the answer to that! The Cheesy Garlic Pizza is filled with lots of thick and stretchy mozzarella, because it would not be a cheesy pizza without that! In addition to the savoury garlic seasoning evenly balanced around the pizza! Keep stretching that cheese until it breaks!</p>
         </div>
     </section>
     <section>
@@ -60,7 +60,7 @@
             <h3>Vegeterian</h3>
         </div>
         <div>
-            <p>No</p>
+            <p>Yes</p>
         </div>
     </section>
     <section>
