--- a/hamandcheese.html
+++ b/hamandcheese.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <span class="outlined-text">
-        <title>Super Pepperoni</title>
+        <title>Dices of Ham</title>
     </span>
 </head>
 <body class="default-background">
@@ -31,9 +31,9 @@
                 Exit
             </a>
         </div>
-        <h1 class="menu-details">Super Pepperoni</h1>
+        <h1 class="menu-details">Dices of Ham</h1>
         <div>
-            <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
+            <img src="./Pizza Images/HAMANDTWOCHEESE.webp" alt="hamandcheese">
         </div>
     </section>
     <section>
@@ -41,7 +41,8 @@
             <h3>Description</h3>
         </div>
         <div>
-            <p>Nothing beats a delicious pepperoni pizza! The Super Pepperoni Pizza has everything from the classic goodness of a pepperoni pizza. This includes a nice traditional Italian pizza base, rich, authentic, and fresh tomato sauce, abundantly huge amount of very large and tasty seasoned pepperoni slices, and last but not least, the thick and stretchy mozzarella! It's all a fan of a basic pepperoni pizza could ask for!</p>
+            <p>A simple pizza with tiny dices of ham! But that doesn't mean simplicity is bad enough to ruin the taste! The Dices of Ham Pizza is filled with seasoned diced and smokey hams everywhere evenly on the pizza, the sweet and fresh tomato sauce, and who can not remember that thick and stretchy mozzarella! A basic yet delicious pizza for sure!</p>
+            <p>(Consideration: We have not directly included pineapple on any of our pizzas for the respect of Italians. For Hawaiian fans, if you'd like, please buy the separate pineapple side dish if you prefer the taste of Hawaiian Pizzas.)</p>
         </div>
     </section>
     <section>
