--- a/help.html
+++ b/help.html
@@ -62,7 +62,15 @@
     </section>
     <section>
         <div>
-            <h3>FAQ 5 - What should I do if I have another question?</h3>
+            <h3>FAQ 5 - What if the product contains something I don't want?</h3>
+        </div>
+        <div>
+            <p>Cross-contamination is a common reason, but we strive to offer you the best experience we can. So please be aware with those issues. Thank you for your patience.</p>
+        </div>
+    </section>
+    <section>
+        <div>
+            <h3>FAQ 6 - What should I do if I have another question?</h3>
         </div>
         <div>
             <p>Not everything in this website is ready for use or have fully developed, therefore we do not have a search engine for finding other problems. Please keep an eye out for updates.</p>
