--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
         <div>
             <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
             <div>
-                <a href="menu.html" class="pepperoni.html">
+                <a href="pepperoni.html" class="menu-button">
                     Super Pepperoni
                 </a>
             </div>
@@ -51,7 +51,7 @@
         <div>
             <img src="./Pizza Images/HAMANDTWOCHEESE.webp" alt="Ham and Cheese">
             <div>
-                <a href="menu.html" class="menu-button">
+                <a href="hamandcheese.html" class="menu-button">
                     Dices of Ham
                 </a>
             </div>
@@ -59,7 +59,7 @@
         <div>
             <img src="./Pizza Images/4-cheese-garlic-pizza.jpg" alt="Cheesy Garlic">
             <div>
-                <a href="menu.html" class="menu-button">
+                <a href="cheesygarlic.html" class="menu-button">
                     Cheesy Garlic
                 </a>
             </div>
@@ -69,29 +69,28 @@
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Neapolitan">
             <div>
-                <a href="menu.html" class="menu-button">
-                        Neapolitan Margherita
-                    </button>
+            <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Neapolitan">
+            </div>
+            <div>
+                <a href="margherita.html" class="menu-button">
+                    Neapolitan Margherita
                 </a>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/Veggie-Pizza-2-of-5-e1691215701129 copy.png" alt="Veggie">
             <div>
-                <a href="menu.html" class="menu-button">
-                        Veggie Goodness
-                    </button>
+                <a href="veggie.html" class="menu-button">
+                    Veggie Goodness
                 </a>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/images (10).jpeg" alt="Seafood">
             <div>
-                <a href="menu.html" class="menu-button">
-                        Ocean of Seafood
-                    </button>
+                <a href="seafood.html" class="menu-button">
+                    Ocean of Seafood
                 </a>
             </div>
         </div>
@@ -102,8 +101,8 @@
         <div>
             <img src="./Pizza Images/Supreme-Pizza-Simply-LaKita-5.jpg" alt="Supreme">
             <div>
-                <a href="menu.html" class="menu-button">
-                        The Supreme
+                <a href="supreme.html" class="menu-button">
+                    The Supreme
                 </a>
             </div>
         </div>
