--- a/supreme.html
+++ b/supreme.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <span class="outlined-text">
-        <title>Super Pepperoni</title>
+        <title>The Supreme</title>
     </span>
 </head>
 <body class="default-background">
@@ -31,9 +31,9 @@
                 Exit
             </a>
         </div>
-        <h1 class="menu-details">Super Pepperoni</h1>
+        <h1 class="menu-details">The Supreme</h1>
         <div>
-            <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
+            <img src="./Pizza Images/Supreme-Pizza-Simply-LaKita-5.jpg" alt="Supreme">
         </div>
     </section>
     <section>
@@ -41,7 +41,7 @@
             <h3>Description</h3>
         </div>
         <div>
-            <p>Nothing beats a delicious pepperoni pizza! The Super Pepperoni Pizza has everything from the classic goodness of a pepperoni pizza. This includes a nice traditional Italian pizza base, rich, authentic, and fresh tomato sauce, abundantly huge amount of very large and tasty seasoned pepperoni slices, and last but not least, the thick and stretchy mozzarella! It's all a fan of a basic pepperoni pizza could ask for!</p>
+            <p>Well, this is our ultimate pizza! The Supreme Pizza has a wide range of toppings in store for you! This includes pepperoni, sausage, ham, mushroom, basil, olives, onions, and peppers! Including the tomato sauce and of course, don’t, and actually never, forget that thick and stretchy mozzarella!</p>
         </div>
     </section>
     <section>
@@ -49,10 +49,10 @@
             <h3>Nutritional Values</h3>
         </div>
         <div>
-            <p>Calories: 1600g</p>
-            <p>Fat: 60g</p>
-            <p>Protein: 90g</p>
-            <p>Carbs: 220g</p>
+            <p>Calories: 2100g</p>
+            <p>Fat: 80g</p>
+            <p>Protein: 130g</p>
+            <p>Carbs: 270g</p>
         </div>
     </section>
     <section>
