--- a/veggie.html
+++ b/veggie.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <span class="outlined-text">
-        <title>Super Pepperoni</title>
+        <title>Veggie Goodness</title>
     </span>
 </head>
 <body class="default-background">
@@ -31,9 +31,9 @@
                 Exit
             </a>
         </div>
-        <h1 class="menu-details">Super Pepperoni</h1>
+        <h1 class="menu-details">Veggie Goodness</h1>
         <div>
-            <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
+            <img src="./Pizza Images/Veggie-Pizza-2-of-5-e1691215701129 copy.png" alt="Veggie">
         </div>
     </section>
     <section>
@@ -41,7 +41,8 @@
             <h3>Description</h3>
         </div>
         <div>
-            <p>Nothing beats a delicious pepperoni pizza! The Super Pepperoni Pizza has everything from the classic goodness of a pepperoni pizza. This includes a nice traditional Italian pizza base, rich, authentic, and fresh tomato sauce, abundantly huge amount of very large and tasty seasoned pepperoni slices, and last but not least, the thick and stretchy mozzarella! It's all a fan of a basic pepperoni pizza could ask for!</p>
+            <p>Do you want a pizza in consideration of animal products? No stress, we have something to offer you! The Veggie Goodness Pizza is a vegan and plant based pizza packed with greens and all sorts of vegetables including Basil, Pepper, Mushrooms, Olives, Onions, and some other favourite veggies! This also includes pure and authentic tomato sauce and vegan cheese, that strives to offer the stretchiness of mozzarella! This is the pizza for you if you prefer no animal cruelty or just wants to eat a healthy diet. </p>
+            <p>(Consideration: Please be aware that this pizza may not be guaranteed to be offered as 100% cruelty-free as it promises in the description due to cross-contamination.)</p>
         </div>
     </section>
     <section>
@@ -49,10 +50,10 @@
             <h3>Nutritional Values</h3>
         </div>
         <div>
-            <p>Calories: 1600g</p>
-            <p>Fat: 60g</p>
-            <p>Protein: 90g</p>
-            <p>Carbs: 220g</p>
+            <p>Calories: 800g</p>
+            <p>Fat: 30g</p>
+            <p>Protein: 45g</p>
+            <p>Carbs: 120g</p>
         </div>
     </section>
     <section>
@@ -60,7 +61,7 @@
             <h3>Vegeterian</h3>
         </div>
         <div>
-            <p>No</p>
+            <p>Yes</p>
         </div>
     </section>
     <section>
@@ -68,7 +69,7 @@
             <h3>Vegan</h3>
         </div>
         <div>
-            <p>No</p>
+            <p>Yes</p>
         </div>
     </section>
     <section>
@@ -76,7 +77,7 @@
             <h3>Gluten Free</h3>
         </div>
         <div>
-            <p>No</p>
+            <p>Yes</p>
         </div>
     </section>
     <section>
