--- a/margherita.html
+++ b/margherita.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <span class="outlined-text">
-        <title>Super Pepperoni</title>
+        <title>Neapolitan Margherita</title>
     </span>
 </head>
 <body class="default-background">
@@ -31,9 +31,9 @@
                 Exit
             </a>
         </div>
-        <h1 class="menu-details">Super Pepperoni</h1>
+        <h1 class="menu-details">Neapolitan Margherita</h1>
         <div>
-            <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
+            <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Cheese">
         </div>
     </section>
     <section>
@@ -41,7 +41,7 @@
             <h3>Description</h3>
         </div>
         <div>
-            <p>Nothing beats a delicious pepperoni pizza! The Super Pepperoni Pizza has everything from the classic goodness of a pepperoni pizza. This includes a nice traditional Italian pizza base, rich, authentic, and fresh tomato sauce, abundantly huge amount of very large and tasty seasoned pepperoni slices, and last but not least, the thick and stretchy mozzarella! It's all a fan of a basic pepperoni pizza could ask for!</p>
+            <p>Do you want the all time charm of a traditional Italian pizza, the Neapolitan Margherita is the perfect answer to that! The Neapolitan Margherita Pizza includes tomato sauce, mozzarella, basil, and olive oil. With balanced amount that aligns with traditional Italian rules for pizza! Feel free to choose this pizza if you're fed up of non-traditional pizza toppings!</p>
         </div>
     </section>
     <section>
@@ -49,10 +49,10 @@
             <h3>Nutritional Values</h3>
         </div>
         <div>
-            <p>Calories: 1600g</p>
-            <p>Fat: 60g</p>
-            <p>Protein: 90g</p>
-            <p>Carbs: 220g</p>
+            <p>Calories: 800g</p>
+            <p>Fat: 30g</p>
+            <p>Protein: 45g</p>
+            <p>Carbs: 120g</p>
         </div>
     </section>
     <section>
@@ -60,7 +60,7 @@
             <h3>Vegeterian</h3>
         </div>
         <div>
-            <p>No</p>
+            <p>Yes</p>
         </div>
     </section>
     <section>
