--- a/seafood.html
+++ b/seafood.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <span class="outlined-text">
-        <title>Super Pepperoni</title>
+        <title>Ocean of Seafood</title>
     </span>
 </head>
 <body class="default-background">
@@ -31,9 +31,9 @@
                 Exit
             </a>
         </div>
-        <h1 class="menu-details">Super Pepperoni</h1>
+        <h1 class="menu-details">Ocean of Seafood</h1>
         <div>
-            <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
+            <img src="./Pizza Images/images (10).jpeg" alt="seafood">
         </div>
     </section>
     <section>
@@ -41,7 +41,7 @@
             <h3>Description</h3>
         </div>
         <div>
-            <p>Nothing beats a delicious pepperoni pizza! The Super Pepperoni Pizza has everything from the classic goodness of a pepperoni pizza. This includes a nice traditional Italian pizza base, rich, authentic, and fresh tomato sauce, abundantly huge amount of very large and tasty seasoned pepperoni slices, and last but not least, the thick and stretchy mozzarella! It's all a fan of a basic pepperoni pizza could ask for!</p>
+            <p>Welcome to the underwater world of pizzas! Here, we offer a variety of seafood ingredients in this pizza of ours! The Ocean of Seafood Pizza is filled with various types of seafood, including scampi, mussels, squid, and clams everywhere on the pizza. In addition to the authentic tomato sauce that almost every other pizza must include. Want some seafood in your appetite? Check this pizza out now!</p>
         </div>
     </section>
     <section>
