Spaghetti pages added + minor changes

--- a/help.html
+++ b/help.html
@@ -38,10 +38,10 @@
     </section>
     <section>
         <div>
-            <h3>FAQ 2 - What are the duplicated images for the "stores" page for?</h3>
+            <h3>FAQ 2 - What is the "stores" section for?</h3>
         </div>
         <div>
-            <p>The placeholders will be replaced with the actual exterior of the real buildings that will be finished by the start of next year as we open our shops. Keep in mind they can change in the future.</p>
+            <p>These are placeholders that will be replaced with the actual exterior of the real buildings that will be finished by the start of next year as we open our shops. Keep in mind they can change in the future.</p>
         </div>
     </section>
     <section>
