--- a/menu.html
+++ b/menu.html
@@ -118,7 +118,7 @@
         <div>
             <img src="./Pizza Images/images (11).jpeg" alt="Spaghetti">
             <div>
-                <a href="menu.html" class="menu-button">
+                <a href="spaghetti.html" class="menu-button">
                     Spaghetti
                 </a>
             </div>
@@ -126,7 +126,7 @@
         <div>
             <img src="./Pizza Images/images (12).jpeg" alt="Macaroni">
             <div>
-                <a href="menu.html" class="menu-button">
+                <a href="macaroni.html" class="menu-button">
                     Macaroni
                 </a>
             </div>
@@ -134,7 +134,7 @@
         <div>
             <img src="./Pizza Images/images (13).jpeg" alt="Fusilli">
             <div>
-                <a href="menu.html" class="menu-button">
+                <a href="fusilli.html" class="menu-button">
                     Fusilli
                 </a>
             </div>
@@ -218,6 +218,58 @@
             <div>
                 <a href="menu.html" class="menu-button">
                     Bruschetta
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- three column design end -->
+
+    <section class="heading-section">
+        <h2 class="heading-text">
+            ─ Drinks ─
+        </h2>
+    </section>
+    <!-- three column design beginning -->
+    <section class="three-column-menu">
+        <div>
+            <img src="./Pizza Images/733408b0454b27134bf4575fec885904.jpg" alt="Water">
+            <div>
+                <a href="menu.html" class="menu-button">
+                    Water
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="./Pizza Images/images (15).jpeg" alt="Juice">
+            <div>
+                <a href="menu.html" class="menu-button">
+                    Orange Juice
+                </a>
+            </div>
+        </div>
+        <div>
+            <img src="./Pizza Images/images (16).jpeg" alt="Cola">
+            <div>
+                <a href="menu.html" class="menu-button">
+                    Coca-Cola
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- three column design end -->
+
+    <section class="heading-section">
+        <h2 class="heading-text">
+            ─ Deserts ─
+        </h2>
+    </section>
+    <!-- three column design beginning -->
+    <section class="three-column-menu">
+        <div>
+            <img src="./Pizza Images/Neapolitan-Ice-Cream-27-681x1024.jpg" alt="Ice Cream">
+            <div>
+                <a href="menu.html" class="menu-button">
+                    Ice Cream
                 </a>
             </div>
         </div>
