--- a/stores.html
+++ b/stores.html
@@ -35,39 +35,27 @@
     <section class="heading-section">
         <h3 class="stores-note-text">Important note:</h3>
         <h3 class="stores-note-text">
-            The following are placeholders for areas in Christchurch that our pizza company would be expected to open shops in, please note this may change in the future and we'll keep you updated.
+            The following location images are placeholders for areas in Christchurch that our pizza company would be expected to open shops in, please note this may change in the future and we'll keep you updated.
         </h3>
     </section>
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Burnside
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 9.36.20 PM.png">
+            <div class="card">   
+                <h2 class="card-text">Burnside</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>
-                <a href="menu.html">
-                    <button class="card">
-                        Bishopdale
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.08.07 PM.png">
+            <div class="card">   
+                <h2 class="card-text">Bishopdale</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>   
-                <a href="menu.html">
-                    <button class="card">
-                        Avonhead
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.08.44 PM.png">
+            <div class="card">   
+                <h2 class="card-text">Avonhead</h2>
             </div>
         </div>
     </section>
@@ -75,33 +63,21 @@
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>   
-                <a href="menu.html">
-                    <button class="card">
-                        Ilam
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.09.11 PM.png">
+            <div class="card">   
+                <h2 class="card-text">Ilam</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>   
-                <a href="menu.html">
-                    <button class="card">
-                        St Albans
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.09.29 PM.png">
+            <div class="card">   
+                <h2 class="card-text">St. Albans</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>   
-                <a href="menu.html">
-                    <button class="card">
-                        Papanui
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.10.07 PM.png">
+            <div class="card">   
+                <h2 class="card-text">Papanui</h2>
             </div>
         </div>
     </section>
@@ -109,33 +85,21 @@
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>   
-                <a href="menu.html">
-                    <button class="card">
-                        New Brighton
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.10.39 PM.png">
+            <div class="card">   
+                <h2 class="card-text">New Brighton</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>   
-                <a href="menu.html">
-                    <button class="card">
-                        Wigram
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.12.00 PM.png">
+            <div class="card">   
+                <h2 class="card-text">Wigram</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>   
-                <a href="menu.html">
-                    <button class="card">
-                        Belfast
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.12.23 PM.png">
+            <div class="card">   
+                <h2 class="card-text">Belfast</h2>
             </div>
         </div>
     </section>
@@ -143,33 +107,21 @@
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>   
-                <a href="menu.html">
-                    <button class="card">
-                        Riccarton
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.12.39 PM.png">
+            <div class="card">
+                <h2 class="card-text">Riccarton</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>   
-                <a href="menu.html">
-                    <button class="card">
-                        Fendalton
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.27.02 PM.png">
+            <div class="card">   
+                <h2 class="card-text">Fendalton</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/pizza-shop-cartoon-icon-illustration-food-building-icon-concept-isolated-premium-flat-cartoon-style-vector.jpg">
-            <div>   
-                <a href="menu.html">
-                    <button class="card">
-                        Christchurch City Centre
-                    </button>
-                </a>
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.27.33 PM.png">
+            <div class="card">   
+                <h2 class="card-text">Christchurch City Centre</h2>
             </div>
         </div>
     </section>
