Finalising the website and putting "work in progress" signs

--- a/menu.html
+++ b/menu.html
@@ -34,6 +34,11 @@
         </h1>
     </section>
     <section class="heading-section">
+        <h3 class="stores-note-text">Important note:</h3>
+        <h3 class="stores-note-text">
+            As of 2025, only Pizzas and Pastas get information pages due to being mainstream menu items. Information pages for other menu items are coming soon in 2026.
+    </section>
+    <section class="heading-section">
         <h2 class="heading-text">
             ─ Pizza ─
         </h2>
@@ -151,26 +156,26 @@
     <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/pine1_1024x1024@2x.webp" alt="Pineapple">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     Pineapple Dices
-                </a>
+                </h3>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/IMG_0509-scaled.jpg" alt="Buffalo Wings">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     Buffalo Wings
-                </a>
+                </h2>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/Crispy-Fries_8.webp" alt="French Fries">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     French Fries
-                </a>
+                </h2>
             </div>
         </div>
     </section>
@@ -179,26 +184,26 @@
     <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/images (14).jpeg" alt="Onion Rings">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     Onion Rings
-                </a>
+                </h2>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/Homemade-Mozzarella-Sticks-9.jpeg" alt="Mozzarella Sticks">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     Mozzarella Sticks
-                </a>
+                </h2>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/Big-Italian-Salad-1200x1553.webp" alt="Salad">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     Salad
-                </a>
+                </h2>
             </div>
         </div>
     </section>
@@ -207,18 +212,18 @@
     <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/easy-homemade-garlic-bread-fbig3.webp" alt="Garlic Bread">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     Garlic Bread
-                </a>
+                </h2>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/bruschetta.jpg" alt="Bruschetta">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     Bruschetta
-                </a>
+                <h2a>
             </div>
         </div>
     </section>
@@ -233,26 +238,26 @@
     <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/733408b0454b27134bf4575fec885904.jpg" alt="Water">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     Water
-                </a>
+                </h2>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/images (15).jpeg" alt="Juice">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     Orange Juice
-                </a>
+                </h2>
             </div>
         </div>
         <div>
             <img src="./Pizza Images/images (16).jpeg" alt="Cola">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     Coca-Cola
-                </a>
+                </h2>
             </div>
         </div>
     </section>
@@ -267,10 +272,10 @@
     <section class="three-column-menu">
         <div>
             <img src="./Pizza Images/Neapolitan-Ice-Cream-27-681x1024.jpg" alt="Ice Cream">
-            <div>
-                <a href="menu.html" class="menu-button">
+            <div class="card">
+                <h2 class="card-text">
                     Ice Cream
-                </a>
+                </h2>
             </div>
         </div>
     </section>
